--- a/ms-auth/pom.xml
+++ b/ms-auth/pom.xml
@@ -59,6 +59,12 @@
             <version>1.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>ms-common-cache</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
