--- a/ms-admin/pom.xml
+++ b/ms-admin/pom.xml
@@ -25,7 +25,11 @@
             <artifactId>ms-common-resource</artifactId>
             <version>1.0.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>ms-common-gateway</artifactId>
+            <version>1.0.0</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
