--- a/ms-gateway/src/main/resources/bootstrap.yml
+++ b/ms-gateway/src/main/resources/bootstrap.yml
@@ -19,8 +19,8 @@ spring:
         locator:      #路由访问方式：http://Gateway_HOST:Gateway_PORT/大写的serviceId/**，其中微服务应用名默认大写访问。
           enabled: true
       routes:
-      - id: ms-admin          #网关路由到服务admin
-        uri: lb://ms-admin
+      - id: ms-admin-service          #网关路由到服务admin
+        uri: lb://ms-admin-service
         predicates:
           - Path=/admin/**
         filters:
