--- a/ms-config/src/main/resources/config/ms-admin-dev.yml
+++ b/ms-config/src/main/resources/config/ms-admin-dev.yml
@@ -4,8 +4,8 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: root
-    url: jdbc:mysql://localhost:3306/demo1?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&allowMultiQueries=true
+    password: PP55PP55
+    url: jdbc:mysql://192.168.0.201:3306/demo1?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&allowMultiQueries=true
 
 ## spring security 配置
 security:
@@ -20,5 +20,5 @@ security:
         - /v2/api-docs
         - /user/info/*
         - /social/info/*
-        - /mobile/*
+        - /social/*
         - /log/save
