--- a/ms-services/ms-admin-service/pom.xml
+++ b/ms-services/ms-admin-service/pom.xml
@@ -22,12 +22,22 @@
         </dependency>
         <dependency>
             <groupId>com.example</groupId>
+            <artifactId>ms-common-user</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
             <artifactId>ms-common-resource</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>ms-common-gateway</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>ms-common-feign</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
@@ -43,7 +53,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
-
+        <!--数据库-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
