--- a/ms-common/pom.xml
+++ b/ms-common/pom.xml
@@ -15,6 +15,8 @@
         <module>ms-common-gateway</module>
         <module>ms-common-cache</module>
         <module>ms-common-feign</module>
+        <module>ms-common-user</module>
+        <module>ms-common-interceptor</module>
     </modules>
     <artifactId>ms-common</artifactId>
     <description>公共模块</description>
@@ -25,6 +27,11 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>${hutool.version}</version>
+        </dependency>
+        <!--server-api-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
         </dependency>
     </dependencies>
 
