--- a/ms-config/src/main/resources/config/ms-auth-dev.yml
+++ b/ms-config/src/main/resources/config/ms-auth-dev.yml
@@ -4,8 +4,8 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: PP55PP55
-    url: jdbc:mysql://192.168.0.201:3306/demo1?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8
+    password: root
+    url: jdbc:mysql://127.0.0.1:3306/demo1?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8
   freemarker:
     allow-request-override: false
     allow-session-override: false
