--- a/ms-services/ms-sms-service/pom.xml
+++ b/ms-services/ms-sms-service/pom.xml
@@ -43,6 +43,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>ms-common-interceptor</artifactId>
+            <version>1.0.0</version>
+        </dependency>
 
     </dependencies>
 
