--- a/ms-common/ms-common-interceptor/pom.xml
+++ b/ms-common/ms-common-interceptor/pom.xml
@@ -25,6 +25,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>ms-common-resource</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
