修复client_credentials 模式下获取不到 限流参数

--- a/ms-common/ms-common-cache/pom.xml
+++ b/ms-common/ms-common-cache/pom.xml
@@ -11,7 +11,11 @@
 
     <artifactId>ms-common-cache</artifactId>
     <dependencies>
-
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>ms-common-core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
         <!--缓存依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
