--- a/ms-common/ms-common-interceptor/pom.xml
+++ b/ms-common/ms-common-interceptor/pom.xml
@@ -18,8 +18,9 @@
         </dependency>
         <!--缓存依赖-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <groupId>com.example</groupId>
+            <artifactId>ms-common-cache</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
