--- a/ms-common/ms-common-resource/pom.xml
+++ b/ms-common/ms-common-resource/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>ms-common-core</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>ms-common-feign</artifactId>
+            <version>1.0.0</version>
+        </dependency>
         <!--安全模块-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
