新增RBAC权限自动维护到数据库

--- a/ms-common/ms-common-resource/pom.xml
+++ b/ms-common/ms-common-resource/pom.xml
@@ -32,5 +32,11 @@
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>ms-common-rabbitmq</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
     </dependencies>
 </project>
