--- a/ms-config/src/main/resources/config/application-dev.yml
+++ b/ms-config/src/main/resources/config/application-dev.yml
@@ -1,3 +1,10 @@
+# MQ配置
+spring:
+ rabbitmq:
+      addresses: 127.0.0.1
+      username: guest
+      password: guest
+
 # feign 配置
 feign:
   hystrix:
