--- a/ms-services/ms-admin-service/pom.xml
+++ b/ms-services/ms-admin-service/pom.xml
@@ -27,6 +27,11 @@
         </dependency>
         <dependency>
             <groupId>com.example</groupId>
+            <artifactId>ms-common-interceptor</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
             <artifactId>ms-common-resource</artifactId>
             <version>1.0.0</version>
         </dependency>
