新增登录日志
新增登录日志，未完善，先提交

--- a/ms-auth/pom.xml
+++ b/ms-auth/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>ms-common-cache</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>ms-common-rabbitmq</artifactId>
+            <version>1.0.0</version>
+        </dependency>
 
     </dependencies>
 
