--- a/ms-common/ms-common-core/pom.xml
+++ b/ms-common/ms-common-core/pom.xml
@@ -10,4 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ms-common-core</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>eu.bitwalker</groupId>
+            <artifactId>UserAgentUtils</artifactId>
+            <version>1.20</version>
+        </dependency>
+    </dependencies>
 </project>
