--- a/ms-common/pom.xml
+++ b/ms-common/pom.xml
@@ -18,6 +18,7 @@
         <module>ms-common-user</module>
         <module>ms-common-interceptor</module>
         <module>ms-common-rabbitmq</module>
+        <module>ms-common-mp</module>
     </modules>
     <artifactId>ms-common</artifactId>
     <description>公共模块</description>
