新增了一些前台接口

--- a/ms-common/ms-common-mp/pom.xml
+++ b/ms-common/ms-common-mp/pom.xml
@@ -28,6 +28,11 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
+        <!--json-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-json</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
