--- a/ms-auth/src/main/resources/bootstrap.yml
+++ b/ms-auth/src/main/resources/bootstrap.yml
@@ -25,3 +25,7 @@ eureka:
   client:
     service-url:
       defaultZone: http://cloudx:cloudx@localhost:8900/eureka/
+
+logging:
+  level:
+    org.springframework: DEBUG
