--- a/ms-common/ms-common-core/pom.xml
+++ b/ms-common/ms-common-core/pom.xml
@@ -17,5 +17,9 @@
             <artifactId>UserAgentUtils</artifactId>
             <version>1.20</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-json</artifactId>
+        </dependency>
     </dependencies>
 </project>
